--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -32,3 +32,29 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+// 快速发布插件
+apply plugin: "guru.stefma.bintrayrelease"
+// lib version
+version = "0.0.2"
+// 组名，一般同包名
+group = "com.lindroid"
+// 组件信息配置
+androidArtifact {
+    // lib 组件 id
+    artifactId = "MyLibrary"
+}
+
+// 发布参数配置
+publish {
+    // bintray 用户名
+    userOrg = 'lindroid'
+    // bintray repository 名称，填入在 bintray 创建的仓库名
+    repoName = 'maven'
+    // 不执行 --dry-run
+    dryRun = false
+    // lib 描述
+    desc = '用于测试上传项目至Jcenter的功能。'
+    // lib 开源地址，不重要
+    website= 'https://github.com/Lindroy/JcenterUploadTest'
+}
